# razer-mic-fix

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
READMES/: README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_ru.md  README_tr.md  README_zh.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  monitor.rs  settings.rs
src-tauri/src/i18n/: mod.rs
