[package]
name = "razer-mic-fix"
version = "1.0.0"
description = "Razer Microphone Volume Fixer - Automatically fixes Razer microphone volume issues"
authors = ["Razer Community"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "RazerMicFixer"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "razer_mic_fix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-fs = "2.1.1"
tauri-plugin-notification = "2.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
once_cell = "1"
parking_lot = "0.12"
dirs = "5.0"
single-instance = "0.3"

# 🔧 Windows API
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage", 
  "Win32_System_Variant",
  "Win32_System_Registry",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Storage_StructuredStorage"
] }



